// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/composer/artifacts adds all ignorePlatformReq items 1`] = `
Array [
  Object {
    "cmd": "composer update --with-dependencies --ignore-platform-req ext-posix --ignore-platform-req ext-sodium --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts catches errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "composer.lock",
      "stderr": "not found",
    },
  },
]
`;

exports[`manager/composer/artifacts catches unmet requirements errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": "composer.lock",
      "stderr": "fooYour requirements could not be resolved to an installable set of packages.bar",
    },
  },
]
`;

exports[`manager/composer/artifacts disable plugins when configured locally 1`] = `
Array [
  Object {
    "cmd": "composer update foo bar --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts disables ignorePlatformReqs 1`] = `
Array [
  Object {
    "cmd": "composer update --with-dependencies --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts does not disable plugins when configured globally 1`] = `
Array [
  Object {
    "cmd": "composer update foo bar --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts installs before running the update when symfony flex is installed 1`] = `
Array [
  Object {
    "cmd": "composer install --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts installs before running the update when symfony flex is installed as dev 1`] = `
Array [
  Object {
    "cmd": "composer install --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts performs lockFileMaintenance 1`] = `
Array [
  Object {
    "cmd": "composer update --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts returns null if unchanged 1`] = `
Array [
  Object {
    "cmd": "composer update foo bar --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts returns updated composer.lock 1`] = `
Array [
  Object {
    "cmd": "composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts supports docker mode 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/php:7.3",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_php -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_php --label=renovate_child -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -v \\"/tmp/renovate/cache\\":\\"/tmp/renovate/cache\\" -e COMPOSER_CACHE_DIR -w \\"/tmp/github/some/repo\\" renovate/php:7.3 bash -l -c \\"install-tool composer 1.10.17 && composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts supports global mode 1`] = `
Array [
  Object {
    "cmd": "composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts supports vendor directory update 1`] = `
Array [
  Object {
    "cmd": "composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/composer/artifacts uses hostRules to set COMPOSER_AUTH 1`] = `
Array [
  Object {
    "cmd": "composer update --with-dependencies --ignore-platform-reqs --no-ansi --no-interaction --no-scripts --no-autoloader --no-plugins",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "COMPOSER_AUTH": "{\\"github-oauth\\":{\\"github.com\\":\\"github-token\\"},\\"gitlab-token\\":{\\"gitlab.com\\":\\"gitlab-token\\"},\\"gitlab-domains\\":[\\"gitlab.com\\"],\\"http-basic\\":{\\"packagist.renovatebot.com\\":{\\"username\\":\\"some-username\\",\\"password\\":\\"some-password\\"},\\"artifactory.yyyyyyy.com\\":{\\"username\\":\\"some-other-username\\",\\"password\\":\\"some-other-password\\"}},\\"bearer\\":{\\"packages-bearer.example.com\\":\\"abcdef0123456789\\"}}",
        "COMPOSER_CACHE_DIR": "/tmp/renovate/cache/others/composer",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
